# reproducible-tabular-ml

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
experiments/: common.py
experiments/openml-cc18/: config.yaml  run.py
experiments/single_instance/: __init__.py  common.py
experiments/single_instance/openml-cc18/: run.py
experiments/single_instance/smoke-test/: run.py
experiments/sklearn_classification_suite/: config.yaml  run.py
experiments/smoke-test/: config.yaml  run.py
src/rtml/: builders.py
src/rtml/benchmarks/: __init__.py  base.py  builders.py
src/rtml/core/: __init__.py  benchmarks.py  datasets.py  fingerprints.py  methods.py  metrics.py  resampling.py  results.py  runs.py  runtime.py  studies.py  tasks.py
src/rtml/datasets/: __init__.py  data.py  openml_loaders.py  sklearn_loaders.py
src/rtml/loggers/: __init__.py  base.py  factory.py  mlflow.py
src/rtml/methods/: __init__.py  base.py
src/rtml/methods/backends/: __init__.py  base.py  registry.py  sklearn.py
src/rtml/methods/engines/: __init__.py  checkpointing.py  config.py  core.py  metrics.py  optim.py  schedulers.py
src/rtml/methods/models/: sklearn.py
src/rtml/preprocessing/: __init__.py  policies.py
src/rtml/resampling/: __init__.py  base.py
src/rtml/results/: __init__.py  artifacts.py  base.py  reports.py  subgroups.py
src/rtml/runs/: __init__.py  base.py  execution.py  plan.py
src/rtml/single_instance/: __init__.py
src/rtml/studies/: __init__.py  base.py
src/rtml/tasks/: __init__.py  base.py  metrics.py
tests/: test_dataset_task.py  test_metrics.py  test_openml_loaders.py  test_preprocessing_policies.py  test_resampling.py  test_studies.py
(+22 files in other folders)
