[project]
name = "rtml"
version = "0.1.0"
description = "Reproducible benchmarking for tabular ML methods"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "scikit-learn",
    "hydra-core",
    "mlflow",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtml"]
