[project]
name = "rtml"
version = "0.1.0"
description = "Reproducible benchmarking for tabular ML methods"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pytorch-ignite",
    "scikit-learn",
    "openml",
    "hydra-core",
    "hydra-ray-launcher",
    "ray[default]",
    "mlflow",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126" , marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtml"]
